2001-03-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-download): Bind 'auto convertion variables' to nil.
	(w3m-w3m-check-header): Fix search 'HTTP/1.[01] 200' method.
	(inline-image-features): Patch from Yuuichi Teranishi san
	<teranisi@gohome.org> at [emacs-w3m:00103].

2001-03-07  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* mime-w3m.el: Renamed mime-w3m-preview-text/html from
	w3m-mime-preview-text/html.  Check of user setting is required.
	(mime-w3m-mode-map): New variable.
	(mime-w3m-get-xref): New function.
	(mime-w3m-view-this-url): Ditto.
	(mime-w3m-mouse-view-this-url): Ditto.
	(mime-w3m-preview-text/html): Use `mime-w3m-mode-map' insted of
	`w3m-mode-map'.  Refer Xref: header to set `w3m-current-url'.
	(mime-put-keymap-region): Define with `defmacro' instead of `defmacro-maybe'.
	(mime-save-background-color): Ditto.

	* w3m.el (w3m-exec-filter): Improved code to process prompt string.

2001-03-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-exec-filter): Delete Prompt string with process output
	buffer.
	(w3m-w3m-check-header): Check 'HTTP/1.[01] 200' for valid
	'content-length'.
	(w3m-w3m-retrieve): Cygwin binary data support. Remove Prompt
	handling.

2001-03-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (emacs-w3m-version): New constant.
	(find-coding-system): Removed duplicated definition.
	(w3m-backlog-remove-oldest): Simplify.
	(w3m-search): Fix typo in function document.

2001-03-05  Keisuke Nishida  <kxn30@po.cwru.edu>

	* w3m.el (w3m-anchor, w3m-image, w3m-action): Use defsubst.

2001-03-05  Keisuke Nishida  <kxn30@po.cwru.edu>

	* w3m.el (and-let*): Removed
	(w3m-save-this-url): Updated.

2001-03-06  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-goto-previous-anchor): Fix mistake on merging
	w3-anchor patch. Cursor should go to beginning of anchor previous.
	(w3m-mode-map): Assign Shift-TAB key with w3m-previous-anchor.

2001-03-06  Shun-ichi GOTO  <gotoh@taiyo.co.jp>
